--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,19 +14,19 @@
     "@angular/compiler": "^19.2.0",
     "@angular/core": "^19.2.0",
     "@angular/forms": "^19.2.0",
+    "@angular/google-maps": "^19.2.0",
+    "@angular/material": "^19.2.0",
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@cloudinary/angular-5.x": "^1.0.0",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.15.0",
-    "@angular/google-maps": "^19.2.0",
-    "@angular/material": "^19.2.0",
     "sweetalert2": "^11.12.4",
-    "@cloudinary/angular-5.x": "^1.0.0"
+    "tslib": "^2.3.0",
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.15",
+    "@angular-devkit/build-angular": "^19.2.17",
     "@angular/cli": "^19.2.15",
     "@angular/compiler-cli": "^19.2.0",
     "@types/jasmine": "~5.1.0",
